python/rregadmin/cli/basic_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -m rregadmin.registry.types_wrapper -m rregadmin.cli.basic_result_wrapper -r ^RRACliState.* -r ^rra_cli_state_.* -r ^rra_cli_cd -r ^rra_cli_.*_key.* -r ^rra_cli_.*_value.* -o basic_wrapper.py basic_wrapper.xml'
from ctypes import *

_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
STRING = c_char_p
from rregadmin.cli.basic_result_wrapper import gboolean
from rregadmin.registry.types_wrapper import Registry
from rregadmin.util.path_wrapper import rra_path
from rregadmin.cli.basic_result_wrapper import RRACliResult


# ../../../rregadmin/cli/basic.h 42
class RRACliState_(Structure):
    pass
RRACliState_._fields_ = [
    # ../../../rregadmin/cli/basic.h 42
]
RRACliState = RRACliState_
# ../../../rregadmin/cli/basic.h 49
rra_cli_state_new = _libraries['librregadmin.so.1'].rra_cli_state_new
rra_cli_state_new.restype = POINTER(RRACliState)
# rra_cli_state_new()
rra_cli_state_new.argtypes = []
rra_cli_state_new.__doc__ = \
"""RRACliState * rra_cli_state_new()
../../../rregadmin/cli/basic.h:49"""
# ../../../rregadmin/cli/basic.h 58
rra_cli_state_new_from_win_dir = _libraries['librregadmin.so.1'].rra_cli_state_new_from_win_dir
rra_cli_state_new_from_win_dir.restype = POINTER(RRACliState)
# rra_cli_state_new_from_win_dir(in_dir)
rra_cli_state_new_from_win_dir.argtypes = [STRING]
rra_cli_state_new_from_win_dir.__doc__ = \
"""RRACliState * rra_cli_state_new_from_win_dir(unknown * in_dir)
../../../rregadmin/cli/basic.h:58"""
# ../../../rregadmin/cli/basic.h 64
rra_cli_state_free = _libraries['librregadmin.so.1'].rra_cli_state_free
rra_cli_state_free.restype = gboolean
# rra_cli_state_free(in_state)
rra_cli_state_free.argtypes = [POINTER(RRACliState)]
rra_cli_state_free.__doc__ = \
"""gboolean rra_cli_state_free(RRACliState * in_state)
../../../rregadmin/cli/basic.h:64"""
# ../../../rregadmin/cli/basic.h 73
rra_cli_state_load_win_dir = _libraries['librregadmin.so.1'].rra_cli_state_load_win_dir
rra_cli_state_load_win_dir.restype = gboolean
# rra_cli_state_load_win_dir(in_state, in_dir)
rra_cli_state_load_win_dir.argtypes = [POINTER(RRACliState), STRING]
rra_cli_state_load_win_dir.__doc__ = \
"""gboolean rra_cli_state_load_win_dir(RRACliState * in_state, unknown * in_dir)
../../../rregadmin/cli/basic.h:73"""
# ../../../rregadmin/cli/basic.h 79
rra_cli_state_get_registry = _libraries['librregadmin.so.1'].rra_cli_state_get_registry
rra_cli_state_get_registry.restype = POINTER(Registry)
# rra_cli_state_get_registry(in_state)
rra_cli_state_get_registry.argtypes = [POINTER(RRACliState)]
rra_cli_state_get_registry.__doc__ = \
"""Registry * rra_cli_state_get_registry(RRACliState * in_state)
../../../rregadmin/cli/basic.h:79"""
# ../../../rregadmin/cli/basic.h 85
rra_cli_state_get_path = _libraries['librregadmin.so.1'].rra_cli_state_get_path
rra_cli_state_get_path.restype = POINTER(rra_path)
# rra_cli_state_get_path(in_state)
rra_cli_state_get_path.argtypes = [POINTER(RRACliState)]
rra_cli_state_get_path.__doc__ = \
"""unknown * rra_cli_state_get_path(unknown * in_state)
../../../rregadmin/cli/basic.h:85"""
# ../../../rregadmin/cli/basic.h 91
rra_cli_state_help_message = _libraries['librregadmin.so.1'].rra_cli_state_help_message
rra_cli_state_help_message.restype = STRING
# rra_cli_state_help_message(in_state)
rra_cli_state_help_message.argtypes = [POINTER(RRACliState)]
rra_cli_state_help_message.__doc__ = \
"""unknown * rra_cli_state_help_message(RRACliState * in_state)
../../../rregadmin/cli/basic.h:91"""
# ../../../rregadmin/cli/basic.h 102
rra_cli_state_apply = _libraries['librregadmin.so.1'].rra_cli_state_apply
rra_cli_state_apply.restype = POINTER(RRACliResult)
# rra_cli_state_apply(in_state, argc, argv)
rra_cli_state_apply.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_state_apply.__doc__ = \
"""RRACliResult * rra_cli_state_apply(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:102"""
# ../../../rregadmin/cli/basic.h 129
rra_cli_cd = _libraries['librregadmin.so.1'].rra_cli_cd
rra_cli_cd.restype = POINTER(RRACliResult)
# rra_cli_cd(in_state, argc, argv)
rra_cli_cd.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_cd.__doc__ = \
"""RRACliResult * rra_cli_cd(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:129"""
# ../../../rregadmin/cli/basic.h 136
rra_cli_has_key = _libraries['librregadmin.so.1'].rra_cli_has_key
rra_cli_has_key.restype = POINTER(RRACliResult)
# rra_cli_has_key(in_state, argc, argv)
rra_cli_has_key.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_has_key.__doc__ = \
"""RRACliResult * rra_cli_has_key(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:136"""
# ../../../rregadmin/cli/basic.h 143
rra_cli_show_key = _libraries['librregadmin.so.1'].rra_cli_show_key
rra_cli_show_key.restype = POINTER(RRACliResult)
# rra_cli_show_key(in_state, argc, argv)
rra_cli_show_key.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_show_key.__doc__ = \
"""RRACliResult * rra_cli_show_key(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:143"""
# ../../../rregadmin/cli/basic.h 150
rra_cli_show_key_parseable = _libraries['librregadmin.so.1'].rra_cli_show_key_parseable
rra_cli_show_key_parseable.restype = POINTER(RRACliResult)
# rra_cli_show_key_parseable(in_state, argc, argv)
rra_cli_show_key_parseable.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_show_key_parseable.__doc__ = \
"""RRACliResult * rra_cli_show_key_parseable(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:150"""
# ../../../rregadmin/cli/basic.h 157
rra_cli_delete_key = _libraries['librregadmin.so.1'].rra_cli_delete_key
rra_cli_delete_key.restype = POINTER(RRACliResult)
# rra_cli_delete_key(in_state, argc, argv)
rra_cli_delete_key.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_delete_key.__doc__ = \
"""RRACliResult * rra_cli_delete_key(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:157"""
# ../../../rregadmin/cli/basic.h 164
rra_cli_is_deletable_key = _libraries['librregadmin.so.1'].rra_cli_is_deletable_key
rra_cli_is_deletable_key.restype = POINTER(RRACliResult)
# rra_cli_is_deletable_key(in_state, argc, argv)
rra_cli_is_deletable_key.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_is_deletable_key.__doc__ = \
"""RRACliResult * rra_cli_is_deletable_key(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:164"""
# ../../../rregadmin/cli/basic.h 173
rra_cli_add_key = _libraries['librregadmin.so.1'].rra_cli_add_key
rra_cli_add_key.restype = POINTER(RRACliResult)
# rra_cli_add_key(in_state, argc, argv)
rra_cli_add_key.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_add_key.__doc__ = \
"""RRACliResult * rra_cli_add_key(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:173"""
# ../../../rregadmin/cli/basic.h 180
rra_cli_has_value = _libraries['librregadmin.so.1'].rra_cli_has_value
rra_cli_has_value.restype = POINTER(RRACliResult)
# rra_cli_has_value(in_state, argc, argv)
rra_cli_has_value.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_has_value.__doc__ = \
"""RRACliResult * rra_cli_has_value(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:180"""
# ../../../rregadmin/cli/basic.h 187
rra_cli_show_value = _libraries['librregadmin.so.1'].rra_cli_show_value
rra_cli_show_value.restype = POINTER(RRACliResult)
# rra_cli_show_value(in_state, argc, argv)
rra_cli_show_value.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_show_value.__doc__ = \
"""RRACliResult * rra_cli_show_value(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:187"""
# ../../../rregadmin/cli/basic.h 196
rra_cli_cat_value = _libraries['librregadmin.so.1'].rra_cli_cat_value
rra_cli_cat_value.restype = POINTER(RRACliResult)
# rra_cli_cat_value(in_state, argc, argv)
rra_cli_cat_value.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_cat_value.__doc__ = \
"""RRACliResult * rra_cli_cat_value(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:196"""
# ../../../rregadmin/cli/basic.h 203
rra_cli_delete_value = _libraries['librregadmin.so.1'].rra_cli_delete_value
rra_cli_delete_value.restype = POINTER(RRACliResult)
# rra_cli_delete_value(in_state, argc, argv)
rra_cli_delete_value.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_delete_value.__doc__ = \
"""RRACliResult * rra_cli_delete_value(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:203"""
# ../../../rregadmin/cli/basic.h 210
rra_cli_add_value = _libraries['librregadmin.so.1'].rra_cli_add_value
rra_cli_add_value.restype = POINTER(RRACliResult)
# rra_cli_add_value(in_state, argc, argv)
rra_cli_add_value.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_add_value.__doc__ = \
"""RRACliResult * rra_cli_add_value(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:210"""
# ../../../rregadmin/cli/basic.h 220
rra_cli_modify_value = _libraries['librregadmin.so.1'].rra_cli_modify_value
rra_cli_modify_value.restype = POINTER(RRACliResult)
# rra_cli_modify_value(in_state, argc, argv)
rra_cli_modify_value.argtypes = [POINTER(RRACliState), c_int, POINTER(STRING)]
rra_cli_modify_value.__doc__ = \
"""RRACliResult * rra_cli_modify_value(RRACliState * in_state, int argc, unknown * * argv)
../../../rregadmin/cli/basic.h:220"""
__all__ = ['rra_cli_state_new', 'rra_cli_state_help_message',
           'rra_cli_is_deletable_key', 'RRACliState_',
           'rra_cli_delete_key', 'rra_cli_cat_value',
           'rra_cli_has_key', 'rra_cli_modify_value',
           'rra_cli_show_value', 'rra_cli_state_get_registry',
           'rra_cli_state_free', 'rra_cli_has_value',
           'rra_cli_add_key', 'rra_cli_state_new_from_win_dir',
           'rra_cli_state_apply', 'rra_cli_show_key_parseable',
           'rra_cli_cd', 'rra_cli_state_get_path',
           'rra_cli_state_load_win_dir', 'rra_cli_delete_value',
           'rra_cli_show_key', 'rra_cli_add_value', 'RRACliState']
